fix(mobile): overflow-x

--- a/ReactJS/src/components/CustomScrollbars.scss
+++ b/ReactJS/src/components/CustomScrollbars.scss
@@ -1,6 +1,10 @@
 @use "../styles/common" as *;
 
 .custom-scrollbar {
+  > div {
+    overflow-x: hidden !important;
+  }
+
   .thumb-horizontal {
     background-color: rgba($bg-scrollbar, 0.4);
     box-shadow: inset 1px 1px 0 rgba($bg-scrollbar, 0.10), inset 0 -1px 0 rgba($bg-scrollbar, 0.07);
